[gd_scene load_steps=3 format=3 uid="uid://xc7ehdgts1gt"]

[ext_resource type="Script" path="res://image.gd" id="1_nivrl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tyblr"]

[node name="image" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 592.0
offset_bottom = 32.0
script = ExtResource("1_nivrl")

[node name="deploy-prod" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_right = 352.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_tyblr")
text = "prod"

[node name="deploy-dev" type="Button" parent="."]
layout_mode = 0
offset_left = 360.0
offset_right = 424.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_tyblr")
text = "dev"

[node name="deploy-other" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_right = 496.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_tyblr")
text = "other"

[node name="roxctl" type="Button" parent="."]
layout_mode = 0
offset_left = 504.0
offset_right = 592.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_tyblr")
text = "roxctl"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_right = 288.0
offset_bottom = 32.0
text = "example.com/placeholder"
vertical_alignment = 1

[connection signal="pressed" from="deploy-prod" to="." method="_on_deployprod_pressed"]
[connection signal="pressed" from="deploy-dev" to="." method="_on_deploydev_pressed"]
[connection signal="pressed" from="deploy-other" to="." method="_on_deployother_pressed"]
[connection signal="pressed" from="roxctl" to="." method="_on_roxctl_pressed"]
